fix bar chart tooltip overflow and test for canvas high definition screen bug

--- a/style/app.less
+++ b/style/app.less
@@ -330,13 +330,6 @@ body{
 													padding: 2px 5px;
 													width: 95px;
 												}
-												.monthTable {
-													position: absolute;
-													top: 30px;
-													left: 0px;
-													width: 50px;
-													height: 50px;
-												}
 											}
 										}
 										.bold {
